# assembler

./: CMakeLists.txt  README.md  config.c  config.h  encoder.c  encoder.h  error_handler.c  error_handler.h  errors.h  input_validator.c  input_validator.h  label.c  label.h  main.c  main.h  makefile.txt  memory_manager.c  memory_manager.h  output_manager.c  output_manager.h  service.c  service.h  מקרי קיצון.txt
